# discord2slack

./: README.md  discord2slackbot.py  pyproject.toml  slack2discord.py  start.sh
cogs/: discord2slackcog.py
cogs/modules/: setting.py
cogs/modules/files/: .env.sample
