[tool.poetry]
name = "discord2slackbot.py"
version = "0.2.0"
description = "discord message to slack tool(using webhook)"
authors = ["tetsuya-k <64536338+tetsuya-ki@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^2.0.0"
python-dateutil = "^2.8.1"
python-dotenv = "^0.15.0"

pycryptodome = "^3.19.1"
slack-bolt = "^1.13.0"
requests = "^2.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
